<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="41dp"
        android:layout_height="43dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="11dp"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="41dp"
        android:layout_height="43dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="11dp"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:contentDescription="@android:string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myGroupsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_groups" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/otherGroupsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_groups"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="21dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/requestsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requests" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>